--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "3.1.0",
     "ejs": "*",
     "less-middleware": "*",
-    "sequelize": "*"
+    "sequelize": "*",
+    "mersenne": "*"
   },
   "devDependencies": {
     "sqlite3": "*"
